Fixed sidebar on small screens

--- a/main.css
+++ b/main.css
@@ -1,13 +1,13 @@
 @font-face {
-    font-family: 'Klinic Slab';
-    src: url('assets/fonts/klinic/klinicslabmediumit-webfont.eot');
-    src: url('assets/fonts/klinic/klinicslabmediumit-webfont.eot?#iefix') format('embedded-opentype'),
-         url('assets/fonts/klinic/klinicslabmediumit-webfont.woff2') format('woff2'),
-         url('assets/fonts/klinic/klinicslabmediumit-webfont.woff') format('woff'),
-         url('assets/fonts/klinic/klinicslabmediumit-webfont.ttf') format('truetype'),
-         url('assets/fonts/klinic/klinicslabmediumit-webfont.svg#klinic_slabmedium_italic') format('svg');
-    font-weight: 400;
-    font-style: italic;
+	font-family: 'Klinic Slab';
+	src: url('assets/fonts/klinic/klinicslabmediumit-webfont.eot');
+	src: url('assets/fonts/klinic/klinicslabmediumit-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('assets/fonts/klinic/klinicslabmediumit-webfont.woff2') format('woff2'),
+		 url('assets/fonts/klinic/klinicslabmediumit-webfont.woff') format('woff'),
+		 url('assets/fonts/klinic/klinicslabmediumit-webfont.ttf') format('truetype'),
+		 url('assets/fonts/klinic/klinicslabmediumit-webfont.svg#klinic_slabmedium_italic') format('svg');
+	font-weight: 400;
+	font-style: italic;
 }
 
 
@@ -15,6 +15,9 @@
 /* General */
 html {
 	overflow-x: hidden;
+}
+body {
+	margin: 0;
 }
 * {
 	box-sizing: border-box;
@@ -181,7 +184,7 @@ section#about, main {
 section#about.top,
 main.top {
 	-webkit-transform: translate(250px,0);
-    transform: translate(250px,0);
+	transform: translate(250px,0);
 }
 
 main {
@@ -202,6 +205,7 @@ section.part {
 }
 section.part .wrap {
 	width: 750px;
+	overflow: auto;
 	margin: 0 auto;
 	padding-top: 50px;
 }
@@ -217,7 +221,7 @@ section.part article {
 	float: left;
 }
 section.part article.small.margin {
-	margin-right: 50px; /* ARRRGGHHHHHHHHH */
+	margin-right: 50px;
 }
 section.part article div:first-child {
 	display: table;
@@ -287,7 +291,7 @@ section.part article div:last-child {
 	-webkit-transition: .3s max-height ease-in-out, .3s padding ease-in-out;
 }
 section.part article.active div:last-child {
-	max-height: 600px;
+	max-height: 1500px;
 	padding: 30px;
 }
 section.part article p {
@@ -299,6 +303,28 @@ section.part article a button {
 	color: #111;
 	border: 2px solid #111;
 	margin-right: 20px;
+}
+section.part article a {
+	text-decoration: none;
+	color: #61B1E5;
+	transition: .2s color ease-in-out;
+	-webkit-transition: .2s color ease-in-out;
+}
+section.part article strong {
+	font-weight: 700;
+	color: #111;
+}
+section.part article i {
+	font-style: italic;
+	color: #7a7a7a;
+}
+section.part article code {
+	background: #f8f8f8;
+	line-height: 1.3;
+	border: 1px solid #DDD;
+	font-family: Consolas,"Liberation Mono",Courier,monospace;
+	padding: 3px;
+	border-radius: 3px;
 }
 
 
@@ -356,8 +382,6 @@ article.full a button {
 	margin-right: 20px;
 }
 
-
-
 /* Large Article Light */
 article.full.light {
 	color: #111;
@@ -366,8 +390,6 @@ article.full.light a button {
 	border: 2px solid #111;
 	color: #111;
 }
-
-
 
 /* Large Article Dark */
 article.full.dark {
@@ -381,14 +403,10 @@ article.full.dark a button::after {
 	background: url('assets/icons/arrow.png');	
 }
 
-
-
 /* Large Article Center */
 article.full.center .inner img {
 
 }
-
-
 
 /* Large Article Side */
 article.full.side .inner .info {
@@ -399,8 +417,133 @@ article.full.side .inner img {
 
 }
 
-/* Large Article Background */
 
+
+/* Browser Size Declarations */
+@media (max-width: 840px) {
+	section.part article div:first-child {
+		width: 300px;
+		height: 300px;
+	}
+	section.part article.small {
+		width: 300px;
+	}
+	section.part article {
+		margin-bottom: 20px;
+	}
+	section.part .wrap {
+		width: 620px;
+		padding-top: 20px;
+	}
+	section.part article.small.margin {
+		margin-right: 20px;
+	}
+	article.full .inner {
+		padding: 50px 20px;
+	}
+	article.full h1 {
+		font-size: 2.7em;
+		margin-bottom: 15px;
+	}
+	article.full h1.long {
+		font-size: 2em;
+	}
+}
+@media (max-width: 660px) {
+	section#about.top,
+	main.top {
+		-webkit-transform: translate(0,0);
+		transform: translate(0,0);
+	}
+	section#about {
+		position: relative;
+		width: 100%;
+		left: 0;
+		top: 0;
+		overflow: auto;
+	}
+	main {
+		position: relative;
+	}
+	#about-back {
+		display: none;
+	}
+	section.part .wrap {
+		width: 300px;
+		padding-top: 20px;
+	}
+	section.part article {
+		width: 300px;
+		display: block;
+	}
+	section.part article.small.margin {
+		margin-right: 0px;
+	}
+	article a button {
+		padding: 10px 16px;
+		margin-right: 10px !important;
+		font-size: 0.9em;
+	}
+	article a button:hover {
+		padding: 10px 16px;
+	}
+	article a button:hover::after {
+		opacity: 0;
+	}
+	section.part article:hover div:first-child::after,
+	section.part article:hover div:first-child h1 {
+		opacity: 0;
+	}
+	section.part article.active div:first-child::after {
+		opacity: 0.85;
+	}
+	section.part article.active div:first-child h1 {
+		opacity: 1;
+	}
+	article.full .inner img {
+		width: 80%;
+		height: auto;
+	}
+
+	/* Buttons maintain hover states */
+	section#about button {
+		margin-bottom: 30px;
+	}
+	section#about button#github {
+		background: #4183C4;
+		border: 2.5px solid transparent;
+		box-shadow: 0 -1px 0 #87B8E9, 0 0 8px #000;
+		color: #fff;
+	}
+	section#about button#vimeo {
+		background: #1ab7ea;
+		border: 2.5px solid transparent;
+		box-shadow: 0 -1px 0 #9BE7FF, 0 0 8px #000;
+		color: #fff;
+	}
+	section#about button#dribbble {
+		background: #ea4c89;
+		border: 2.5px solid transparent;
+		box-shadow: 0 -1px 0 #E48CAF, 0 0 8px #000;
+		color: #fff;
+	}
+
+	#resume {
+		right: 8px;
+		color: #fff;
+	}
+	#resume::after {
+		content: "";
+		background: url('assets/icons/arrow.png');
+		transition: 0.15s all ease-in-out;
+		width: 8px;
+		height: 12px;
+		position: absolute;
+		top: 3px;
+		opacity: 1;
+		right: 0;
+	}
+}
 /* Retina Declarations */
 @media 
 (-webkit-min-device-pixel-ratio: 2), 
